# ocac

./: CMakeLists.txt  LICENSE  README.md
contrib/dev/: genparam.c  method.c  parseparam.c
docs/: occ_classes.md  stream.md  subscriptions.md
impl/: managers.h  obj_registry.c  obj_registry.h  ocacopts.h
impl/occclasses/: root.c  root.h  shared.h
impl/occclasses/managers/: abstract.c  abstract.h  device.c  device.h  devicemanager.c  devicemanager.h  manager.c  manager.h  subscription.c  subscription.h  subscriptionmanager.c  subscriptionmanager.h
impl/occclasses/workers/: block.c  block.h  worker.c  worker.h
src/core/: class.c  core.c  def.c  net.c  obj.c  reset.c  session.c  utf8.c
src/core/occ/: datatypes.c
src/core/occ/classes/: root.c
src/core/occ/classes/managers/: device.c  manager.c
src/include/ocac/: arch.h  class.h  core.h  debug.h  def.h  mdns.h  net.h  obj.h  opt.h  reset.h  session.h  utf8.h
src/include/ocac/host/: sock.h  timer.h
src/include/ocac/occ/classes/: root.h
src/include/ocac/occ/classes/managers/: device.h  manager.h
src/include/ocac/occ/datatypes/: agent.h  base.h  blockmatrix.h  eventsubscription.h  framework.h  library.h  management.h  network.h  sampling.h  task.h  time.h  worker.h
src/include/ocac/ocp/: ocp1.h
